# powerbi-agent

./: .gitignore  ATTRIBUTIONS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
skills/: audit-tenant-settings.md  bpa-rules.md  c-sharp-scripting.md  connect-pbid.md  create-pbi-report.md  cyber-security.md  data-catalog-lineage.md  data-governance-traceability.md  data-transformation.md  dax-mastery.md  dax-performance.md  deneb-visuals.md  fabric-cli.md  fabric-pipelines.md  lineage-analysis.md  measure-glossary.md  medallion-architecture.md  modifying-theme-json.md  pbi-report-design.md  pbip-format.md  pbir-cli.md  pbir-format-enhanced.md  performance-scale.md  power-bi-connect.md  power-bi-custom-visuals.md  power-bi-dax.md  power-bi-doctor.md  power-bi-fabric.md  power-bi-model.md  power-bi-report.md  power-query.md  project-management.md  python-visuals.md  r-visuals.md  refresh-semantic-model.md  refreshing-semantic-model.md  report-authoring.md  report-conversion.md  report-structure.md  report-theming.md  (+12 more)
src/powerbi_agent/: __init__.py  _asm.py  cli.py  connect.py  dax.py  doctor.py  errors.py  fabric.py  model.py  report.py  visual.py
src/powerbi_agent/skills/: __init__.py  installer.py
src/powerbi_agent/web/: app.py  storage.py
src/powerbi_agent/web/models/: config.py
src/powerbi_agent/web/routes/: api.py  model_designer.py  pipeline.py  rules.py  sources.py
src/powerbi_agent/web/templates/: base.html  index.html  model_designer.html  pipeline.html  rules.html  sources.html
tests/: test_cli.py  test_connect_detection.py  test_dax.py  test_errors.py  test_report.py  test_skills_install.py  test_visual.py
