[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "powerbi-agent"
version = "0.2.0"
description = "Give Claude Code enterprise-grade Power BI superpowers — community-driven, AI-powered BI automation"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Santosh Kanthety", email = "santoshkanthety@github.com" }]
keywords = ["power-bi", "claude", "ai", "cli", "automation", "dax", "fabric"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27,<1.0",  # 1.0.dev3+ removes timeout kwarg and restructures the client API
    "pydantic>=2.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
# pythonnet ONLY needed for Power BI Desktop local SSAS connection (Windows, Python <=3.13).
# It is intentionally NOT included in the fabric extra — Fabric works on any OS/Python version.
desktop = [
    "pythonnet>=3.0; python_version < '3.14' and sys_platform == 'win32'",
]
fabric  = ["azure-identity>=1.15"]
dev     = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/santoshkanthety/powerbi-agent"
Documentation = "https://github.com/santoshkanthety/powerbi-agent/wiki"
"Bug Tracker" = "https://github.com/santoshkanthety/powerbi-agent/issues"
Changelog = "https://github.com/santoshkanthety/powerbi-agent/releases"

[project.scripts]
pbi-agent = "powerbi_agent.cli:main"
pbia = "powerbi_agent.cli:main"

[project.entry_points."powerbi_agent.plugins"]
# Community plugins register here:
# my-plugin = "my_package.plugin:MyPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/powerbi_agent"]

[tool.hatch.build.targets.wheel.force-include]
# Bundle the top-level skills/ directory inside the installed package.
# Installer looks for them at powerbi_agent/skills/data/ when installed via pip,
# and falls back to project_root/skills/ when running from a cloned source repo.
"skills" = "powerbi_agent/skills/data"

[tool.ruff]
line-length = 130
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
